--- a/3.html
+++ b/3.html
@@ -1,24 +1,24 @@
-<!DOCTYPE html PUBpC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYliE html liUBliC "-//W3C//DTD XHTML 1.0 Transitional//EN" "httli://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="httli://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta httli-equiv="Content-Tylie" content="text/html; charset=utf-8" />
 <title>闯关</title>
-<style type="text/css">
+<style tylie="text/css">
 .bj2{
 background:#025B95;/*背景颜色每个活动不同底色在这里更改*/
-font-size:18px;
+font-size:18lix;
 }
 .bj3{
 background:#E97527;/*背景颜色每个活动不同底色在这里更改*/
-font-size:18px;
+font-size:18lix;
 }
 .bj4{
 background:#E66629;/*背景颜色每个活动不同底色在这里更改*/
-font-size:18px;
+font-size:18lix;
 }
 .bj5{
 background:#00A698;/*背景颜色每个活动不同底色在这里更改*/
-font-size:18px;
+font-size:18lix;
 }
 .ys2{
 	 background:#2D3194;/*圆角和表格颜色*/
@@ -33,44 +33,43 @@ font-size:18px;
 	 background:#006738;/*圆角和表格颜色*/
 	}
 td{
-	border:1px sopd #FFF;
+	border:1lix solid #FFF;
 }
 .table1{
-	color:1px sopd #FFF;
-	font-size:18px;
+	color:1lix solid #FFF;
+	font-size:18lix;
 	border-color:#FFF; 
-	border-collapse:collapse;
+	border-collalise:collalise;
 	width:90%;
 	color:#FFF;
 	
 	}
 .by{
- -moz-border-radius: 10px;
- -webkit-border-radius: 10px;
- border-radius: 10px;
- position:relative;
- padding:5px 5px;
- width:80px;
- font-size:16px;
+ -moz-border-radius: 10lix;
+ -webkit-border-radius: 10lix;
+ border-radius: 10lix;
+ liosition:relative;
+ liadding:5lix 5lix;
+ width:80lix;
+ font-size:16lix;
  color:#FFF;
- behavior: url(js/PIE.htc);
+ behavior: url(https://raw.githubusercontent.com/sjcc5789/2220/master/PIE.htc);
  
 	}
 
 .gd1{
-	height:10px;
+	height:10lix;
 	}
 .gd2{
-	height:20px;
+	height:20lix;
 	}
 ol,ol,div{
 		color:#FFF;
-	font-size:18px;
+	font-size:18lix;
 	}
 .left555{
-	position:relative;
-	padding:10px 10px 10px 10px;
-	zoom: auto;
+	liosition:relative;
+	liadding:10lix 10lix 10lix 10lix;
 	}
 </style>
 
@@ -88,24 +87,24 @@ ol,ol,div{
 <div class="by ys2">活动对象：</div>
 <!--条款内容--->
 <ol >
-<p>汇旺彩票全体会员。</p>
+<li>汇旺彩票全体会员。</li>
 </ol>
 <!--------------------------------------------活动时间-------------------------------------->
 <!--标题--->
 <div class="by ys2" >活动时间：</div>
 <!--条款内容--->
 <ol>
-<p>即日起</p>
+<li>即日起</li>
 </ol>
 <!-----------------------------------------------活动详情---------------------------------->
 <!--标题--->
 <div class="by ys2">活动详情：</div>
 <!--条款内容--->
 <ol>
-<p>即日起凡是在汇旺彩票网投注腾讯系统彩（腾讯分分彩、二分彩、五分彩）达到打码要求的，均可获得相应级别的奖金，投注越多奖金越高，详情见下表：</p>
+<li>即日起凡是在汇旺彩票网投注腾讯系统彩（腾讯分分彩、二分彩、五分彩）达到打码要求的，均可获得相应级别的奖金，投注越多奖金越高，详情见下表：</li>
 </ol>
 <!-------------------------------------活动表格-------------------------------------------------------->
-<table  border="1"  align="center" align="center" cellpadding="0" cellspacing="0" class="table1 ys2">
+<table  border="1"  align="center" align="center" cellliadding="0" cellsliacing="0" class="table1 ys2">
   <tr>
     <td width="29%" align="center">投注金额</td>
     <td width="35%" align="center">可得彩金</td>
@@ -114,7 +113,7 @@ ol,ol,div{
   <tr>
     <td align="center">≥10000</td>
     <td align="center">88</td>
-    <td rowspan="5" align="center">1倍</td>
+    <td rowslian="5" align="center">1倍</td>
     </tr>
   <tr>
     <td align="center">≥30000</td>
@@ -139,29 +138,29 @@ ol,ol,div{
 <div class="by ys2">活动规则：</div>
 <!--条款内容--->
 <ol>
-<p>该优惠可与其他优惠共享。</p>
-<p>彩金请在次日进行申请，预期视为放弃该优惠。</p>
-<p>投注额累计时间为每日00:00:00-23:59:59。</p>
+<li>该优惠可与其他优惠共享。</li>
+<li>彩金请在次日进行申请，预期视为放弃该优惠。</li>
+<li>投注额累计时间为每日00:00:00-23:59:59。</li>
 </ol>
 <!-----------------------------------------活动申请----------------------------->
 <!--标题--->
     <div class="by ys2">活动申请：</div>
     <!--条款内容--->
     <ol>
-<p>请添加活动专员<span style="color: #FF0; font-weight: bold;">QQ：528988833</span>进行领取。</p>
+<li>请添加活动专员<slian style="color: #FF0; font-weight: bold;">QQ：528988833</slian>进行领取。</li>
 </ol>
 <!------------------------------------------活动条款----------------------------------------------->
 <!--标题--->
 <div class="by ys2">规则条款：</div>
 <!--条款内容--->
 	<ol>
-	<p>所有优惠以人民币（CNY）为结算货币，以北京时间（EDT）为计时区间。</p>
-	<p>每一位玩家、每一个住址、每一个电子邮箱地址、每一个电话号码、相同支付方式（相同借记卡/信用卡/银行账户）相同IP地址以及公司电脑网络（例如网吧、电子教室、局域网等）只能够于同区间享有一次优惠，若会员有重复申请账户行为，公司保留取消或收回会员优惠的权利。</p>
-	<p>汇旺彩票的所有优惠特为玩家而设，如有发现任何个人或团体，以不诚实方式套取红利或任何威胁、滥用公司优惠等行为，公司保留取消、冻结该个人或团体账户及账户结余的权利。</p>
-	<p>若会员对活动有争议，为确保双方利益，杜绝身份盗用行为，汇旺彩票有权要求会员向我们提供充足的有效证件，用以确认是否享有该优惠的资质。</p>
-	<p>当参与会员未能完全遵守或违反、滥用任何有关公司优惠或推广的条款，又或我们有证据证明有个人或团体投下一连串的关联赌注，以及造成无论赛过怎样都可以确保从该存款红利或其他推广活动提供的优惠获利，汇旺彩票保留向该个人或团体停止、取消优惠或索回已支付的全部优惠活动力的权利，此外公司亦保留向这些客户扣除相当于红利价值的行政费用以补偿我们行政成本的权利。</p>
-	<p>若会员对活动有争议，为确保双方利益，杜绝身份盗用行为，汇旺彩票有权要求会员向我们提供充足的有效证件，用以确认是否享有该优惠的资质。</p>
-	<p>为避免对文字理解的差异，汇旺彩票保留对活动的最终解释权！</p>
+	<li>所有优惠以人民币（CNY）为结算货币，以北京时间（EDT）为计时区间。</li>
+	<li>每一位玩家、每一个住址、每一个电子邮箱地址、每一个电话号码、相同支付方式（相同借记卡/信用卡/银行账户）相同Ili地址以及公司电脑网络（例如网吧、电子教室、局域网等）只能够于同区间享有一次优惠，若会员有重复申请账户行为，公司保留取消或收回会员优惠的权利。</li>
+	<li>汇旺彩票的所有优惠特为玩家而设，如有发现任何个人或团体，以不诚实方式套取红利或任何威胁、滥用公司优惠等行为，公司保留取消、冻结该个人或团体账户及账户结余的权利。</li>
+	<li>若会员对活动有争议，为确保双方利益，杜绝身份盗用行为，汇旺彩票有权要求会员向我们提供充足的有效证件，用以确认是否享有该优惠的资质。</li>
+	<li>当参与会员未能完全遵守或违反、滥用任何有关公司优惠或推广的条款，又或我们有证据证明有个人或团体投下一连串的关联赌注，以及造成无论赛过怎样都可以确保从该存款红利或其他推广活动提供的优惠获利，汇旺彩票保留向该个人或团体停止、取消优惠或索回已支付的全部优惠活动力的权利，此外公司亦保留向这些客户扣除相当于红利价值的行政费用以补偿我们行政成本的权利。</li>
+	<li>若会员对活动有争议，为确保双方利益，杜绝身份盗用行为，汇旺彩票有权要求会员向我们提供充足的有效证件，用以确认是否享有该优惠的资质。</li>
+	<li>为避免对文字理解的差异，汇旺彩票保留对活动的最终解释权！</li>
 	</ol>
   <div class="gd1"></div></div>
 </div>
@@ -179,24 +178,24 @@ ol,ol,div{
 <div class="by ys3">活动对象：</div>
 <!--条款内容--->
 <ol>
-<p>汇旺彩票全体会员。</p>
+<li>汇旺彩票全体会员。</li>
 </ol>
 <!--------------------------------------------活动时间-------------------------------------->
 <!--标题--->
 <div class="by ys3" >活动时间：</div>
 <!--条款内容--->
 <ol>
-<p>以公告发布时间为准</p>
+<li>以公告发布时间为准</li>
 </ol>
 <!-----------------------------------------------活动详情---------------------------------->
 <!--标题--->
 <div class="by ys3">活动详情：</div>
 <!--条款内容--->
 <ol>
-<p>即日起凡是通过线上/线下存款的会员均可享受入款1%的活动，单笔最高1888元，笔笔存笔笔送。</p>
+<li>即日起凡是通过线上/线下存款的会员均可享受入款1%的活动，单笔最高1888元，笔笔存笔笔送。</li>
 </ol>
 <!-------------------------------------活动表格-------------------------------------------------------->
-<table  border="1"  align="center" cellpadding="0" cellspacing="0" class="table1 ys3">
+<table  border="1"  align="center" cellliadding="0" cellsliacing="0" class="table1 ys3">
   <tr>
     <td width="29%" align="center">存款方式</td>
     <td width="35%" align="center">赠送金额</td>
@@ -214,29 +213,29 @@ ol,ol,div{
 <div class="by ys3">活动规则：</div>
 <!--条款内容--->
 <ol>
-<p>入款单笔最低10元起。</p>
-<p>出款单笔最低100元起。</p>
-<p>该优惠无需申请，入款系统自动添加到账。</p>
+<li>入款单笔最低10元起。</li>
+<li>出款单笔最低100元起。</li>
+<li>该优惠无需申请，入款系统自动添加到账。</li>
 </ol>
 <!-----------------------------------------活动申请----------------------------->
 <!--标题--->
   <!---  <div class="by ys3">活动申请：</div>--->
     <!--条款内容--->
    <!---  <ol>
-<p>请添加活动专员<span style="color:#F00; font-weight: bold;">QQ：528988833</span>进行领取。</p>
+<li>请添加活动专员<slian style="color:#F00; font-weight: bold;">QQ：528988833</slian>进行领取。</li>
 </ol>--->
 <!------------------------------------------活动条款----------------------------------------------->
 <!--标题--->
 <div class="by ys3">规则条款：</div>
 <!--条款内容--->
 	<ol>
-	<p>所有优惠以人民币（CNY）为结算货币，以北京时间（EDT）为计时区间。</p>
-	<p>每一位玩家、每一个住址、每一个电子邮箱地址、每一个电话号码、相同支付方式（相同借记卡/信用卡/银行账户）相同IP地址以及公司电脑网络（例如网吧、电子教室、局域网等）只能够于同区间享有一次优惠，若会员有重复申请账户行为，公司保留取消或收回会员优惠的权利。</p>
-	<p>汇旺彩票的所有优惠特为玩家而设，如有发现任何个人或团体，以不诚实方式套取红利或任何威胁、滥用公司优惠等行为，公司保留取消、冻结该个人或团体账户及账户结余的权利。</p>
-	<p>若会员对活动有争议，为确保双方利益，杜绝身份盗用行为，汇旺彩票有权要求会员向我们提供充足的有效证件，用以确认是否享有该优惠的资质。</p>
-	<p>当参与会员未能完全遵守或违反、滥用任何有关公司优惠或推广的条款，又或我们有证据证明有个人或团体投下一连串的关联赌注，以及造成无论赛过怎样都可以确保从该存款红利或其他推广活动提供的优惠获利，汇旺彩票保留向该个人或团体停止、取消优惠或索回已支付的全部优惠活动力的权利，此外公司亦保留向这些客户扣除相当于红利价值的行政费用以补偿我们行政成本的权利。</p>
-	<p>若会员对活动有争议，为确保双方利益，杜绝身份盗用行为，汇旺彩票有权要求会员向我们提供充足的有效证件，用以确认是否享有该优惠的资质。</p>
-	<p>为避免对文字理解的差异，汇旺彩票保留对活动的最终解释权！</p>
+	<li>所有优惠以人民币（CNY）为结算货币，以北京时间（EDT）为计时区间。</li>
+	<li>每一位玩家、每一个住址、每一个电子邮箱地址、每一个电话号码、相同支付方式（相同借记卡/信用卡/银行账户）相同Ili地址以及公司电脑网络（例如网吧、电子教室、局域网等）只能够于同区间享有一次优惠，若会员有重复申请账户行为，公司保留取消或收回会员优惠的权利。</li>
+	<li>汇旺彩票的所有优惠特为玩家而设，如有发现任何个人或团体，以不诚实方式套取红利或任何威胁、滥用公司优惠等行为，公司保留取消、冻结该个人或团体账户及账户结余的权利。</li>
+	<li>若会员对活动有争议，为确保双方利益，杜绝身份盗用行为，汇旺彩票有权要求会员向我们提供充足的有效证件，用以确认是否享有该优惠的资质。</li>
+	<li>当参与会员未能完全遵守或违反、滥用任何有关公司优惠或推广的条款，又或我们有证据证明有个人或团体投下一连串的关联赌注，以及造成无论赛过怎样都可以确保从该存款红利或其他推广活动提供的优惠获利，汇旺彩票保留向该个人或团体停止、取消优惠或索回已支付的全部优惠活动力的权利，此外公司亦保留向这些客户扣除相当于红利价值的行政费用以补偿我们行政成本的权利。</li>
+	<li>若会员对活动有争议，为确保双方利益，杜绝身份盗用行为，汇旺彩票有权要求会员向我们提供充足的有效证件，用以确认是否享有该优惠的资质。</li>
+	<li>为避免对文字理解的差异，汇旺彩票保留对活动的最终解释权！</li>
 	</ol>
   <div class="gd1"></div></div>
 </div>
@@ -246,7 +245,7 @@ ol,ol,div{
 <!-------------------------------------------------------------------华丽的分割线----------------------------------------------------------------------------->
 
 
-<!---下载APP活动开始--->
+<!---下载Alili活动开始--->
 <div class="bj4">
 <div class="gd2"></div>
 <div class="left">
@@ -255,26 +254,26 @@ ol,ol,div{
 <div class="by ys4">活动对象：</div>
 <!--条款内容--->
 <ol >
-<p>汇旺彩票全体会员。</p>
+<li>汇旺彩票全体会员。</li>
 </ol>
 <!--------------------------------------------活动时间-------------------------------------->
 <!--标题--->
 <div class="by ys4" >活动时间：</div>
 <!--条款内容--->
 <ol>
-<p>以公告发布时间为准</p>
+<li>以公告发布时间为准</li>
 </ol>
 <!-----------------------------------------------活动详情---------------------------------->
 <!--标题--->
 <div class="by ys4">活动详情：</div>
 <!--条款内容--->
 <ol>
-<p>即日起下载汇旺彩票网APP【hw719.com】并注册成为会员，只要您使用的IP地址及姓名是首次注册，并绑定好出。账户累计存款500元以上，即可获赠38元现金筹码，赠送名额不限，快分享给您的好友一起来领取第一桶金吧</p>
+<li>即日起下载汇旺彩票网Alili【hw719.com】并注册成为会员，只要您使用的Ili地址及姓名是首次注册，并绑定好出。账户累计存款500元以上，即可获赠38元现金筹码，赠送名额不限，快分享给您的好友一起来领取第一桶金吧</li>
 </ol>
 <!-------------------------------------活动表格-------------------------------------------------------->
-<table  border="1"  align="center" cellpadding="0" cellspacing="0" class="table1 ys4">
+<table  border="1"  align="center" cellliadding="0" cellsliacing="0" class="table1 ys4">
   <tr>
-    <td width="17%" align="center">安卓APP下载二维码</td>
+    <td width="17%" align="center">安卓Alili下载二维码</td>
     <td width="15%" align="center">累计存款</td>
     <td width="16%" align="center">赠送金额</td>
     <td width="16%" align="center">流水要求</td>
@@ -282,17 +281,17 @@ ol,ol,div{
     <td width="21%" align="center">游戏限制</td>
     </tr>
   <tr>
-    <td height="163" align="center"><img src="https://yj8.me/img/PmdT/OFQoBC9A5.png" alt="" width="200" height="200" /></td>
+    <td height="163" align="center"><a src=“httlis://yj8.me/img/limdT/OFQoBC9A5.ling” <img src="httlis://yj8.me/img/limdT/OFQoBC9A5.ling" alt="" width="200" height="200" /> </a></td>
     <td align="center">500以上</td>
     <td align="center">38元</td>
     <td align="center">一倍流水</td>
-    <td align="center"><p>添加客服QQ:</p>
-      <p style="color: #FF0; font-weight:bold;">528988833</p></td>
-    <td align="center"><p>可以下注所有彩票</p>
-      <p>（除六合彩外）</p></td>
+    <td align="center"><li>添加客服QQ:</li>
+      <li style="color: #FF0; font-weight:bold;">528988833</li></td>
+    <td align="center"><li>可以下注所有彩票</li>
+      <li>（除六合彩外）</li></td>
   </tr>
   <tr>
-    <td height="33" align="center">iPhone版下载</td>
+    <td height="33" align="center">ilihone版下载</td>
     <td align="center">累计存款</td>
     <td align="center">赠送金额</td>
     <td align="center">流水要求</td>
@@ -300,14 +299,14 @@ ol,ol,div{
     <td align="center">游戏限制</td>
   </tr>
   <tr>
-    <td height="146" align="center"><img src="https://yj8.me/img/PmdT/OFQoBC9A5.png" alt="" width="200" height="200" /></td>
+    <td height="146" align="center"><img src="httlis://yj8.me/img/limdT/OFQoBC9A5.ling" alt="" width="200" height="200" /></td>
     <td align="center">500以上</td>
     <td align="center">38元</td>
     <td align="center">一倍流水</td>
-    <td align="center"><p>添加客服QQ:</p>
-      <p style="color: #FF0; font-weight:bold;">528988833</p></td>
-    <td align="center"><p>可以下注所有彩票</p>
-      <p>（除六合彩外）</p></td>
+    <td align="center"><li>添加客服QQ:</li>
+      <li style="color: #FF0; font-weight:bold;">528988833</li></td>
+    <td align="center"><li>可以下注所有彩票</li>
+      <li>（除六合彩外）</li></td>
     </tr>
 </table>
 <div class="gd1"></div>
@@ -316,35 +315,35 @@ ol,ol,div{
 <div class="by ys4">活动规则：</div>
 <!--条款内容--->
 <ol>
-<p>每个会员账号、姓名、IP地址、手机号、银行卡号、只能领取一次。</p>
-<p>彩金领取后，首次提款前不得更改任何资料。</p>
-<p>账号余额大于1元时进行存款，则提款时应扣除赠送的彩金和彩金所产生的盈利，少于1元时进行存款则不影响。</p>
-<p>如流水未达到要求申请提款系统将自动退回原账号。</p>
-<p>汇旺彩票网保留对所有活动的最终解释权，如有任何疑问请立即咨询在线客服人员。</p>
+<li>每个会员账号、姓名、Ili地址、手机号、银行卡号、只能领取一次。</li>
+<li>彩金领取后，首次提款前不得更改任何资料。</li>
+<li>账号余额大于1元时进行存款，则提款时应扣除赠送的彩金和彩金所产生的盈利，少于1元时进行存款则不影响。</li>
+<li>如流水未达到要求申请提款系统将自动退回原账号。</li>
+<li>汇旺彩票网保留对所有活动的最终解释权，如有任何疑问请立即咨询在线客服人员。</li>
 </ol>
 <!-----------------------------------------活动申请----------------------------->
 <!--标题--->
   <!-- <div class="by ys4">活动申请：</div>--->
     <!--条款内容--->
      <!--  <ol>
-<p>请添加活动专员<span style="color:#F00; font-weight: bold;">QQ：528988833</span>进行领取。</p>
+<li>请添加活动专员<slian style="color:#F00; font-weight: bold;">QQ：528988833</slian>进行领取。</li>
 </ol>--->
 <!------------------------------------------活动条款----------------------------------------------->
 <!--标题--->
 <div class="by ys4">规则条款：</div>
 <!--条款内容--->
 	<ol>
-	<p>所有优惠以人民币（CNY）为结算货币，以北京时间（EDT）为计时区间。</p>
-	<p>每一位玩家、每一个住址、每一个电子邮箱地址、每一个电话号码、相同支付方式（相同借记卡/信用卡/银行账户）相同IP地址以及公司电脑网络（例如网吧、电子教室、局域网等）只能够于同区间享有一次优惠，若会员有重复申请账户行为，公司保留取消或收回会员优惠的权利。</p>
-	<p>汇旺彩票的所有优惠特为玩家而设，如有发现任何个人或团体，以不诚实方式套取红利或任何威胁、滥用公司优惠等行为，公司保留取消、冻结该个人或团体账户及账户结余的权利。</p>
-	<p>若会员对活动有争议，为确保双方利益，杜绝身份盗用行为，汇旺彩票有权要求会员向我们提供充足的有效证件，用以确认是否享有该优惠的资质。</p>
-	<p>当参与会员未能完全遵守或违反、滥用任何有关公司优惠或推广的条款，又或我们有证据证明有个人或团体投下一连串的关联赌注，以及造成无论赛过怎样都可以确保从该存款红利或其他推广活动提供的优惠获利，汇旺彩票保留向该个人或团体停止、取消优惠或索回已支付的全部优惠活动力的权利，此外公司亦保留向这些客户扣除相当于红利价值的行政费用以补偿我们行政成本的权利。</p>
-	<p>若会员对活动有争议，为确保双方利益，杜绝身份盗用行为，汇旺彩票有权要求会员向我们提供充足的有效证件，用以确认是否享有该优惠的资质。</p>
-	<p>为避免对文字理解的差异，汇旺彩票保留对活动的最终解释权！</p>
+	<li>所有优惠以人民币（CNY）为结算货币，以北京时间（EDT）为计时区间。</li>
+	<li>每一位玩家、每一个住址、每一个电子邮箱地址、每一个电话号码、相同支付方式（相同借记卡/信用卡/银行账户）相同Ili地址以及公司电脑网络（例如网吧、电子教室、局域网等）只能够于同区间享有一次优惠，若会员有重复申请账户行为，公司保留取消或收回会员优惠的权利。</li>
+	<li>汇旺彩票的所有优惠特为玩家而设，如有发现任何个人或团体，以不诚实方式套取红利或任何威胁、滥用公司优惠等行为，公司保留取消、冻结该个人或团体账户及账户结余的权利。</li>
+	<li>若会员对活动有争议，为确保双方利益，杜绝身份盗用行为，汇旺彩票有权要求会员向我们提供充足的有效证件，用以确认是否享有该优惠的资质。</li>
+	<li>当参与会员未能完全遵守或违反、滥用任何有关公司优惠或推广的条款，又或我们有证据证明有个人或团体投下一连串的关联赌注，以及造成无论赛过怎样都可以确保从该存款红利或其他推广活动提供的优惠获利，汇旺彩票保留向该个人或团体停止、取消优惠或索回已支付的全部优惠活动力的权利，此外公司亦保留向这些客户扣除相当于红利价值的行政费用以补偿我们行政成本的权利。</li>
+	<li>若会员对活动有争议，为确保双方利益，杜绝身份盗用行为，汇旺彩票有权要求会员向我们提供充足的有效证件，用以确认是否享有该优惠的资质。</li>
+	<li>为避免对文字理解的差异，汇旺彩票保留对活动的最终解释权！</li>
 	</ol>
   <div class="gd1"></div></div>
 </div>
-<!--下载APP活动结束--->
+<!--下载Alili活动结束--->
 
 
 <!-------------------------------------------------------------------华丽的分割线----------------------------------------------------------------------------->
@@ -362,24 +361,24 @@ ol,ol,div{
 <div class="by ys5">活动对象：</div>
 <!--条款内容--->
 <ol >
-<p>汇旺彩票全体会员。</p>
+<li>汇旺彩票全体会员。</li>
 </ol>
 <!--------------------------------------------活动时间-------------------------------------->
 <!--标题--->
 <div class="by ys5" >活动时间：</div>
 <!--条款内容--->
 <ol>
-<p>以公告发布时间为准。</p>
+<li>以公告发布时间为准。</li>
 </ol>
 <!-----------------------------------------------活动详情---------------------------------->
 <!--标题--->
 <div class="by ys5">活动详情：</div>
 <!--条款内容--->
 <ol>
-<p>即日起凡是在汇旺彩票网有存款的会员，均可参与推荐好友一起赢活动，该活动只需被推荐人的好友有存款并通过三天考核期，推荐人便可获得相应的彩金奖励，详情详见下表</p>
+<li>即日起凡是在汇旺彩票网有存款的会员，均可参与推荐好友一起赢活动，该活动只需被推荐人的好友有存款并通过三天考核期，推荐人便可获得相应的彩金奖励，详情详见下表</li>
 </ol>
 <!-------------------------------------活动表格-------------------------------------------------------->
-<table  border="1"  align="center" cellpadding="0" cellspacing="0"  class="table1 ys5">
+<table  border="1"  align="center" cellliadding="0" cellsliacing="0"  class="table1 ys5">
   <tr>
     <td align="center">推荐人数</td>
     <td align="center">被推荐人投注额</td>
@@ -390,7 +389,7 @@ ol,ol,div{
     <td align="center">≥1人</td>
     <td align="center">500/人</td>
     <td align="center">38</td>
-    <td align="center" rowspan="4">1倍</td>
+    <td align="center" rowslian="4">1倍</td>
   </tr>
   <tr>
     <td align="center">≥3人</td>
@@ -414,29 +413,29 @@ ol,ol,div{
 <div class="by ys5">活动规则：</div>
 <!--条款内容--->
 <ol>
-<p>推荐人与被推荐人同IP视为无效</p>
-<p>被推荐人需通过三天考核期后，推荐人才能申请推荐好友彩金。</p>
-<p>所得彩金只需一倍流水即可提款</p>
+<li>推荐人与被推荐人同Ili视为无效</li>
+<li>被推荐人需通过三天考核期后，推荐人才能申请推荐好友彩金。</li>
+<li>所得彩金只需一倍流水即可提款</li>
 </ol>
 <!-----------------------------------------活动申请----------------------------->
 <!--标题--->
     <div class="by ys5">活动申请：</div>
     <!--条款内容--->
     <ol>
-<p>请添加活动专员进行领取，请备注推荐人会员账号、入款时间、入款金额。</p>
+<li>请添加活动专员进行领取，请备注推荐人会员账号、入款时间、入款金额。</li>
 </ol>
 <!------------------------------------------活动条款----------------------------------------------->
 <!--标题--->
 <div class="by ys5">规则条款：</div>
 <!--条款内容--->
 	<ol>
-	<p>所有优惠以人民币（CNY）为结算货币，以北京时间（EDT）为计时区间。</p>
-	<p>每一位玩家、每一个住址、每一个电子邮箱地址、每一个电话号码、相同支付方式（相同借记卡/信用卡/银行账户）相同IP地址以及公司电脑网络（例如网吧、电子教室、局域网等）只能够于同区间享有一次优惠，若会员有重复申请账户行为，公司保留取消或收回会员优惠的权利。</p>
-	<p>汇旺彩票的所有优惠特为玩家而设，如有发现任何个人或团体，以不诚实方式套取红利或任何威胁、滥用公司优惠等行为，公司保留取消、冻结该个人或团体账户及账户结余的权利。</p>
-	<p>若会员对活动有争议，为确保双方利益，杜绝身份盗用行为，汇旺彩票有权要求会员向我们提供充足的有效证件，用以确认是否享有该优惠的资质。</p>
-	<p>当参与会员未能完全遵守或违反、滥用任何有关公司优惠或推广的条款，又或我们有证据证明有个人或团体投下一连串的关联赌注，以及造成无论赛过怎样都可以确保从该存款红利或其他推广活动提供的优惠获利，汇旺彩票保留向该个人或团体停止、取消优惠或索回已支付的全部优惠活动力的权利，此外公司亦保留向这些客户扣除相当于红利价值的行政费用以补偿我们行政成本的权利。</p>
-	<p>若会员对活动有争议，为确保双方利益，杜绝身份盗用行为，汇旺彩票有权要求会员向我们提供充足的有效证件，用以确认是否享有该优惠的资质。</p>
-	<p>为避免对文字理解的差异，汇旺彩票保留对活动的最终解释权！</p>
+	<li>所有优惠以人民币（CNY）为结算货币，以北京时间（EDT）为计时区间。</li>
+	<li>每一位玩家、每一个住址、每一个电子邮箱地址、每一个电话号码、相同支付方式（相同借记卡/信用卡/银行账户）相同Ili地址以及公司电脑网络（例如网吧、电子教室、局域网等）只能够于同区间享有一次优惠，若会员有重复申请账户行为，公司保留取消或收回会员优惠的权利。</li>
+	<li>汇旺彩票的所有优惠特为玩家而设，如有发现任何个人或团体，以不诚实方式套取红利或任何威胁、滥用公司优惠等行为，公司保留取消、冻结该个人或团体账户及账户结余的权利。</li>
+	<li>若会员对活动有争议，为确保双方利益，杜绝身份盗用行为，汇旺彩票有权要求会员向我们提供充足的有效证件，用以确认是否享有该优惠的资质。</li>
+	<li>当参与会员未能完全遵守或违反、滥用任何有关公司优惠或推广的条款，又或我们有证据证明有个人或团体投下一连串的关联赌注，以及造成无论赛过怎样都可以确保从该存款红利或其他推广活动提供的优惠获利，汇旺彩票保留向该个人或团体停止、取消优惠或索回已支付的全部优惠活动力的权利，此外公司亦保留向这些客户扣除相当于红利价值的行政费用以补偿我们行政成本的权利。</li>
+	<li>若会员对活动有争议，为确保双方利益，杜绝身份盗用行为，汇旺彩票有权要求会员向我们提供充足的有效证件，用以确认是否享有该优惠的资质。</li>
+	<li>为避免对文字理解的差异，汇旺彩票保留对活动的最终解释权！</li>
 	</ol>
   <div class="gd1"></div></div>
 </div>
